--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
   <thead>
     <tr>
       <th scope="col">Numero</th>
-      <thscope="col" >Discurso</thscope=>
+      <th scope="col" >Discurso</th>
       <th scope="col">Discursante</th>
       <th scope="col">Fecha</th>
     </tr>
